# pkm

./: .gitignore  CLAUDE.md  PHASE1.md  PHASE2.md  README.md  SPEC-v0.2.0.md  SPEC.md  pyproject.toml
notes/phase2/: stage-a.md  stage-b.md  stage-c.md
src/pkm/: __main__.py  approval.py  cache.py  catalogue.py  cli.py  config.py  extract.py  hashing.py  ingest.py  logging_setup.py  policy.py  policy_loader.py  producer.py  rebuild.py  routing.py  telemetry.py  transform.py  transform_declaration.py  transform_run.py
src/pkm/migrations/: 0001_initial_schema.py  0002_normalise_tags.py  0003_transform_substrate.py
src/pkm/producers/: __init__.py  docling.py  pandoc.py  unstructured.py
src/pkm/transforms/: entity_extraction.py
tests/: conftest.py  test_approval.py  test_cache.py  test_catalogue.py  test_cli.py  test_config.py  test_cost_gate.py  test_entity_extraction.py  test_extract.py  test_hashing.py  test_ingest.py  test_invariants.py  test_live_entity_extraction.py  test_logging_setup.py  test_policy.py  test_policy_loader.py  test_producer_docling.py  test_producer_pandoc.py  test_producer_protocol.py  test_producer_unstructured.py  test_rebuild.py  test_routing.py  test_sensitive_doc_gate.py  test_stage_a_exit.py  test_telemetry.py  test_transform.py  test_transform_declaration.py  test_transform_run.py
tests/fixtures/unstructured/: sample.eml  sample.pptx
