[project]
name = "pkm"
version = "0.0.1"
description = "Personal knowledge management — content-addressed extraction cache and catalogue."
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.13,<3.14"
dependencies = [
    "duckdb>=1.0",
    "pyyaml>=6.0",
    "pypandoc>=1.13",
    "docling>=2.14",
    "unstructured>=0.16",
]

[project.scripts]
pkm = "pkm.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pkm"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["pkm"]

[tool.mypy]
strict = true
warn_unreachable = true
files = ["src/pkm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
