[project]
name = "pkm"
version = "0.0.1"
description = "Personal knowledge management — content-addressed extraction cache and catalogue."
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.13,<3.14"
dependencies = [
    "duckdb>=1.0",
    "pyyaml>=6.0",
    "pypandoc>=1.13",
    "docling>=2.14",
    # Unstructured's optional format dependencies, added as specific
    # formats have surfaced in real corpora. Do not pre-empt — add
    # each only when a real extraction failure names it:
    #   .xlsx                → openpyxl (already transitive)
    #   .xls                 → xlrd (added 2026-04-21, 500-doc run)
    #   .xls/.xlsx protected → msoffcrypto-tool (added 2026-04-21)
    "unstructured>=0.16",
    "msoffcrypto-tool>=6.0.0",
    "xlrd>=2.0.2",
    # Docling pre-flight: pikepdf detects encrypted PDFs (cheap
    # header parse) so the producer can return a specific error
    # rather than Docling's uninformative status=FAILURE. Added
    # 2026-04-22 after the 1000-doc run's WTW-salaries PDF cluster.
    "pikepdf>=10.5.1",
    # Transform output validation (SPEC v0.2.0 §20.2).
    "jsonschema>=4.23",
    # LLM provider SDK for Phase 2 transforms (SPEC v0.2.0 §20).
    "anthropic>=0.42",
]

[project.scripts]
pkm = "pkm.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.26.0.20260408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pkm"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["pkm"]

[tool.mypy]
strict = true
warn_unreachable = true
files = ["src/pkm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
